# week05-python-networking

./: .gitignore  .pre-commit-config.yaml  README.md  capture.json  capture.pcap  pyproject.toml  requirements.txt
data/: capture.pcap  flask.pcap
docs/: e2e_demo.md
scripts/: W5-01 socket_fundamentals.py  W5-02 tcp_server.py  W5_03_banner_grabber.py  W5_04_network_formatter.py  banner_grabber.py  login_capture.json  marco_polo.py  marco_polo_127.0.0.1.md  marco_polo_port_sanner.py  network_formatter.py  network_monitor.py  packet_sniffer.py  pcap_analyser.py  recon_toolkit.py  scan_report_127.0.0.1.md  scapy_crafting.py  socket_fundamentals.py  tcp_server.py
tests/: test_networking.py
