[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "week05"
version = "0.1.0"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]

[tool.pylint.main]
source-roots = ["scripts"]

[tool.mypy]
mypy_path = "scripts"

[tool.pytest.ini_options]
pythonpath = ["scripts"]

[tool.pylint."messages control"]
disable = ["no-member"]
